<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:paddingVertical="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:id="@+id/imgAvatar"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtStoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="3dp"
        android:layout_toEndOf="@+id/imgAvatar"
        android:text="@string/story_name"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStoryName"
        android:layout_toEndOf="@id/imgAvatar"
        android:layout_marginHorizontal="15dp"
        android:text="@string/author"
        android:textColor="@color/grayText"
        android:textSize="12sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="12sp"
        android:textColor="@color/grayText"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/txtAuthor"
        android:layout_toEndOf="@id/imgAvatar"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txtType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Type"
        android:textSize="12sp"
        android:textColor="@color/grayText"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/txtStatus"
        android:layout_toEndOf="@id/imgAvatar"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txtTotalChapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Total Chapter"
        android:textSize="12sp"
        android:textColor="@color/grayText"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/txtType"
        android:layout_toEndOf="@id/imgAvatar"
        android:layout_marginTop="8dp"/>
</RelativeLayout>